--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://ValentynaDzhadan.github.io/team-project1",
+  "homepage": "https://MiaktynovS.github.io/team-project-1",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /team-project1/"
+    "build": "parcel build src/*.html --public-url /team-project-1/"
   },
   "repository": {
     "type": "git",
